--- a/components/about.html
+++ b/components/about.html
@@ -2,16 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Green-E</title>
+    <title>Title</title>
     <!-- CSS only -->
     <link rel="stylesheet" href="/styles/main.css">
     <!-- JavaScript Bundle with Popper -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-
 </head>
 <body>
-<!-- main page wrapper !-->
 <div class="MainPageWrapper container-fluid">
     <div class="navbar navbar-expand-md bg-light sticky-top">
         <div class="container">
@@ -74,6 +72,6 @@
         <h1 class="display-1">Here</h1>
     </section>
 </div>
-<script src="/scripts/script.js"></script>
+
 </body>
 </html>
